add new fonctionality to Admin